--- a/src/home.html
+++ b/src/home.html
@@ -12,7 +12,7 @@
 				<img id="logo" src="mercedes_logo1.png" alt="Mercedes AMG Petronas Logo">
 			</picture>
 			<ul>
-				<li><a href="#">Home</a></li>
+				<li><a href="home.html">Home</a></li>
 				<li><a href="#">About</a></li>
 				<li><a href="#">Gallery</a>
 					<ul class="dropdown">
@@ -25,6 +25,10 @@
 		</nav>		
 	</head>
 	<body>
+		<p></p>
+		<p></p>
+		<p></p>
+		<p></p>
 		<div class="slideshow-container">
 			<div class="mySlides fade">
 				<div class="numbertext">1 / 3</div>
