--- a/src/home.html
+++ b/src/home.html
@@ -5,26 +5,28 @@
 		<meta name="description" content="Mercedes F1 Team">
 		<meta name="keywords" content="mercedes,f1,formula 1,hamilton">
 		<meta name="author" content="Necula Florin-Alexandru">
-		<link rel="stylesheet" type="text/css" href="style.css">
-		<nav role="navigation">
-			<picture>
-				<source media="(max-width: 1000px)" srcset="mercedes_logo2.png">
-				<img id="logo" src="mercedes_logo1.png" alt="Mercedes AMG Petronas Logo">
-			</picture>
-			<ul>
-				<li><a href="home.html">Home</a></li>
-				<li><a href="#">About</a></li>
-				<li><a href="#">Gallery</a>
-					<ul class="dropdown">
-						<li><a href="#">Team</a></li>
-						<li><a href="#">Cars</a></li>
-					</ul>
-				</li>
-				<li><a href="#">Contact</a></li>
-			</ul>
-		</nav>		
+		<link rel="stylesheet" type="text/css" href="style.css">	
 	</head>
 	<body>
+		<header>
+			<nav role="navigation">
+					<picture>
+						<source media="(max-width: 1000px)" srcset="mercedes_logo2.png">
+						<img id="logo" src="mercedes_logo1.png" alt="Mercedes AMG Petronas Logo">
+					</picture>
+					<ul>
+						<li><a href="home.html">Home</a></li>
+						<li><a href="home.html">About</a></li>
+						<li><a href="home.html">Gallery</a>
+							<ul class="dropdown">
+								<li><a href="home.html">Team</a></li>
+								<li><a href="home.html">Cars</a></li>
+							</ul>
+						</li>
+						<li><a href="home.html">Contact</a></li>
+					</ul>
+			</nav>
+		</header>
 		<h1>2019 FIA FORMULA ONE WORLD CONSTRUCTORS' CHAMPIONS</h1>
 		<div class="slideshow-container">
 			<div class="mySlides fade">
@@ -51,15 +53,17 @@
 			<span class="dot" onclick="currentSlide(2)"></span>
 			<span class="dot" onclick="currentSlide(3)"></span>
 		</div>
-		<h4>#ATeamComeTrue – Mercedes-AMG Petronas Motorsport write Formula One history with their sixth consecutive double title</h4>
-		<img id="homeimg" src="bottaswin2.jpg">
-		<p>- Mercedes-AMG Petronas Motorsport win the FIA Formula One Constructors’ Championship for the sixth time in a row</p>
-		<p>- Lewis and Valtteri are the only two drivers who can still win the Drivers’ Championship, securing the sixth consecutive Drivers’ Title for the team as well – making Mercedes-AMG Petronas Motorsport the first team in Formula One history to win both titles six times in a row</p>
-		<p>- Valtteri claimed his sixth victory in Formula One, his third of the 2019 season and first at the Japanese Grand Prix</p>
-		<p>- Lewis finished the race in P3 claiming an additional point for the fastest lap – his fourth fastest lap at the Japanese Grand Prix, equalling Michael Schumacher’s record for the most fastest laps in Japan</p>
-		<p>- Today’s result marks the 100th points finish for Valtteri</p>
-		<p>- Lewis (338 points) leads the Drivers’ Championship by 64 points from Valtteri (274 points) with Charles Leclerc (221) a further 53 points behind, giving only our two drivers the chance to win the 2019 Drivers’ Title</p>
-		<p>- Mercedes-AMG Petronas Motorsport (612 points) leads Ferrari (435 points) by 177 points – an unassailable lead in the Constructors’ Championship</p>
+		<section>
+			<h4>#ATeamComeTrue – Mercedes-AMG Petronas Motorsport write Formula One history with their sixth consecutive double title</h4>
+			<img id="homeimg" src="bottaswin2.jpg">
+			<p>- Mercedes-AMG Petronas Motorsport win the FIA Formula One Constructors’ Championship for the sixth time in a row</p>
+			<p>- Lewis and Valtteri are the only two drivers who can still win the Drivers’ Championship, securing the sixth consecutive Drivers’ Title for the team as well – making Mercedes-AMG Petronas Motorsport the first team in Formula One history to win both titles six times in a row</p>
+			<p>- Valtteri claimed his sixth victory in Formula One, his third of the 2019 season and first at the Japanese Grand Prix</p>
+			<p>- Lewis finished the race in P3 claiming an additional point for the fastest lap – his fourth fastest lap at the Japanese Grand Prix, equalling Michael Schumacher’s record for the most fastest laps in Japan</p>
+			<p>- Today’s result marks the 100th points finish for Valtteri</p>
+			<p>- Lewis (338 points) leads the Drivers’ Championship by 64 points from Valtteri (274 points) with Charles Leclerc (221) a further 53 points behind, giving only our two drivers the chance to win the 2019 Drivers’ Title</p>
+			<p>- Mercedes-AMG Petronas Motorsport (612 points) leads Ferrari (435 points) by 177 points – an unassailable lead in the Constructors’ Championship</p>
+		</section>
 	</body>
 	<script src="jscript.js"></script>
 </html>
