--- a/src/home.html
+++ b/src/home.html
@@ -1,6 +1,6 @@
 <html>
 	<head>
-	<title>Home</title>
+	<title>Home - Mercedes-AMG F1</title>
 		<meta charset="UTF-8">
 		<meta name="description" content="Mercedes F1 Team">
 		<meta name="keywords" content="mercedes,f1,formula 1,hamilton">
@@ -16,8 +16,8 @@
 					</picture>
 					<ul>
 						<li><a href="home.html">Home</a></li>
-						<li><a href="home.html">About</a></li>
-						<li><a href="home.html">Gallery</a>
+						<li><a href="about.html">About</a></li>
+						<li><a href="">Gallery</a>
 							<ul class="dropdown">
 								<li><a href="home.html">Team</a></li>
 								<li><a href="home.html">Cars</a></li>
@@ -32,17 +32,17 @@
 			<div class="mySlides fade">
 				<div class="numbertext">1 / 3</div>
 				<img src="6thchamp.jpg" style="width:100%">
-				<div class="text">Caption Text</div>
+				<div class="text">Team celebrates winning the 2019 Constructors' Championship</div>
 			</div>
 			<div class="mySlides fade">
 				<div class="numbertext">2 / 3</div>
-				<img src="team.jpg" style="width:100%">
-				<div class="text">Caption Two</div>
+				<img src="rsz_slideshow2.jpg" style="width:100%">
+				<div class="text">This year's car performed well beyond expectations</div>
 			</div>
 			<div class="mySlides fade">
 				<div class="numbertext">3 / 3</div>
-				<img src="6thchamp.jpg" style="width:100%">
-				<div class="text">Caption Three</div>
+				<img src="rsz_lewis.jpg" style="width:100%">
+				<div class="text">Lewis Hamilton - One step closer to making history</div>
 			</div>
 			<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 			<a class="next" onclick="plusSlides(1)">&#10095;</a>
@@ -54,8 +54,8 @@
 			<span class="dot" onclick="currentSlide(3)"></span>
 		</div>
 		<section>
-			<h4>#ATeamComeTrue – Mercedes-AMG Petronas Motorsport write Formula One history with their sixth consecutive double title</h4>
 			<img id="homeimg" src="bottaswin2.jpg">
+			<h4>#ATeamComeTrue – Mercedes-AMG Petronas Motorsport write Formula One history with their sixth consecutive double title</h4>
 			<p>- Mercedes-AMG Petronas Motorsport win the FIA Formula One Constructors’ Championship for the sixth time in a row</p>
 			<p>- Lewis and Valtteri are the only two drivers who can still win the Drivers’ Championship, securing the sixth consecutive Drivers’ Title for the team as well – making Mercedes-AMG Petronas Motorsport the first team in Formula One history to win both titles six times in a row</p>
 			<p>- Valtteri claimed his sixth victory in Formula One, his third of the 2019 season and first at the Japanese Grand Prix</p>
