--- a/src/about.html
+++ b/src/about.html
@@ -7,7 +7,7 @@
 		<meta name="author" content="Necula Florin-Alexandru">
 		<link rel="stylesheet" type="text/css" href="style.css">	
 	</head>
-	<body>
+	<body id="about">
 		<header>
 			<nav role="navigation">
 					<picture>
@@ -31,15 +31,33 @@
 		<h2>Drivers</h2>
 		<div class="container">
 			<div class="item">
-				<img id="frontimg" src="hamilton.png" alt="Hamilton">
+				<img id="drivers" src="rsz_hamilton.jpg">
+				<div id="imgtext">Lewis Hamilton</div>
 			</div>
 			<div class="item">
-				<p>Lewis Hamilton was born on 7 January 1985 in Tewin, England. At the tender age of eight, Lewis sat in a kart for the first time and was immediately bitten by the racing bug. Mercedes-Benz soon recognised the British youngster's enormous talent, becoming one of his sponsors right at the start of his career.</p>
-				<p>A six-time Formula One World Champion, he is widely regarded as one of the greatest drivers in the history of the sport, and considered by some to be the greatest of all time. He won his first drivers' title with McLaren in 2008, before moving to Mercedes in 2013, with whom he has won a further five titles. One of the most successful drivers in the history of the sport, Hamilton's six World Championship titles is the second-most of all time, as is his tally of 83 race victories and 150 podium finishes. He currently holds the records for the all-time most career points (3399), the all-time most pole positions (87), the most grand slams in a season (3) and the most points in a season (408).</p>
+				<img id="drivers" src="rsz_valteri.jpg">
+				<div id="imgtext">Valteri Bottas</div>
 			</div>
 			<div class="item">
-				<img id="sideimg" src="lewis2.jpg">
+				<img id="drivers" src="rsz_ocon.jpg">
+				<div id="imgtext">Esteban Ocon</div>
+			</div>			
+			<div class="item">
+				<img id="drivers" src="rsz_1gutierez.jpg">
+				<div id="imgtext">Esteban Gutierrez</div>
 			</div>
 		</div>
+		<h2>Management</h2>
+		<div class="container">
+			<div class="item">
+				<img id="drivers" src="rsz_wolff.jpg">
+				<div id="imgtext">Toto Wolff</div>
+			</div>
+			<div class="niki" id="niki">
+				<img id="drivers" src="rsz_niki.jpg">
+				<div id="imgtext">Niki Lauda</div>
+			</div>
+		</div>
+		<script src="script2.js"></script>
 	</body>
 </html>
