--- a/src/about.html
+++ b/src/about.html
@@ -1,6 +1,6 @@
 <html>
 	<head>
-	<title>About - Mercedes-AMG F1</title>
+		<title>About - Mercedes-AMG F1</title>
 		<meta charset="UTF-8">
 		<meta name="description" content="Mercedes F1 Team">
 		<meta name="keywords" content="mercedes,f1,formula 1,hamilton">
@@ -17,10 +17,10 @@
 					<ul>
 						<li><a href="home.html">Home</a></li>
 						<li><a href="about.html">About</a></li>
-						<li><a href="">Gallery</a>
+						<li><a>Gallery</a>
 							<ul class="dropdown">
-								<li><a href="home.html">Team</a></li>
-								<li><a href="home.html">Cars</a></li>
+								<li><a href="team.html">Team</a></li>
+								<li><a href="cars.html">Cars</a></li>
 							</ul>
 						</li>
 						<li><a href="home.html">Contact</a></li>
