--- a/src/home.html
+++ b/src/home.html
@@ -1,6 +1,6 @@
 <html>
 	<head>
-	<title>Home - Mercedes-AMG F1</title>
+		<title>Home - Mercedes-AMG F1</title>
 		<meta charset="UTF-8">
 		<meta name="description" content="Mercedes F1 Team">
 		<meta name="keywords" content="mercedes,f1,formula 1,hamilton">
@@ -17,10 +17,10 @@
 					<ul>
 						<li><a href="home.html">Home</a></li>
 						<li><a href="about.html">About</a></li>
-						<li><a href="">Gallery</a>
+						<li><a>Gallery</a>
 							<ul class="dropdown">
-								<li><a href="home.html">Team</a></li>
-								<li><a href="home.html">Cars</a></li>
+								<li><a href="team.html">Team</a></li>
+								<li><a href="cars.html">Cars</a></li>
 							</ul>
 						</li>
 						<li><a href="home.html">Contact</a></li>
@@ -28,41 +28,46 @@
 			</nav>
 		</header>
 		<h1>2019 FIA FORMULA ONE WORLD CONSTRUCTORS' CHAMPIONS</h1>
-		<div class="slideshow-container">
-			<div class="mySlides fade">
-				<div class="numbertext">1 / 3</div>
-				<img src="6thchamp.jpg" style="width:100%">
-				<div class="text">Team celebrates winning the 2019 Constructors' Championship</div>
-			</div>
-			<div class="mySlides fade">
-				<div class="numbertext">2 / 3</div>
-				<img src="rsz_slideshow2.jpg" style="width:100%">
-				<div class="text">This year's car performed well beyond expectations</div>
-			</div>
-			<div class="mySlides fade">
-				<div class="numbertext">3 / 3</div>
-				<img src="rsz_lewis.jpg" style="width:100%">
-				<div class="text">Lewis Hamilton - One step closer to making history</div>
-			</div>
-			<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
-			<a class="next" onclick="plusSlides(1)">&#10095;</a>
-		</div>
-		<br>
-		<div style="text-align:center">
-			<span class="dot" onclick="currentSlide(1)"></span>
-			<span class="dot" onclick="currentSlide(2)"></span>
-			<span class="dot" onclick="currentSlide(3)"></span>
-		</div>
 		<section>
-			<img id="homeimg" src="bottaswin2.jpg">
-			<h4>#ATeamComeTrue – Mercedes-AMG Petronas Motorsport write Formula One history with their sixth consecutive double title</h4>
-			<p>- Mercedes-AMG Petronas Motorsport win the FIA Formula One Constructors’ Championship for the sixth time in a row</p>
-			<p>- Lewis and Valtteri are the only two drivers who can still win the Drivers’ Championship, securing the sixth consecutive Drivers’ Title for the team as well – making Mercedes-AMG Petronas Motorsport the first team in Formula One history to win both titles six times in a row</p>
-			<p>- Valtteri claimed his sixth victory in Formula One, his third of the 2019 season and first at the Japanese Grand Prix</p>
-			<p>- Lewis finished the race in P3 claiming an additional point for the fastest lap – his fourth fastest lap at the Japanese Grand Prix, equalling Michael Schumacher’s record for the most fastest laps in Japan</p>
-			<p>- Today’s result marks the 100th points finish for Valtteri</p>
-			<p>- Lewis (338 points) leads the Drivers’ Championship by 64 points from Valtteri (274 points) with Charles Leclerc (221) a further 53 points behind, giving only our two drivers the chance to win the 2019 Drivers’ Title</p>
-			<p>- Mercedes-AMG Petronas Motorsport (612 points) leads Ferrari (435 points) by 177 points – an unassailable lead in the Constructors’ Championship</p>
+			<div class="slideshow-container">
+				<div class="mySlides fade">
+					<div class="numbertext">1 / 3</div>
+					<img src="6thchamp.jpg" style="width:100%">
+					<div class="text">Team celebrates winning the 2019 Constructors' Championship</div>
+				</div>
+				<div class="mySlides fade">
+					<div class="numbertext">2 / 3</div>
+					<img src="rsz_slideshow2.jpg" style="width:100%">
+					<div class="text">This year's car performed well beyond expectations</div>
+				</div>
+				<div class="mySlides fade">
+					<div class="numbertext">3 / 3</div>
+					<img src="rsz_lewis.jpg" style="width:100%">
+					<div class="text">Lewis Hamilton - One step closer to making history</div>
+				</div>
+				<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+				<a class="next" onclick="plusSlides(1)">&#10095;</a>
+			</div>
+			<br>
+			<div style="text-align:center">
+				<span class="dot" onclick="currentSlide(1)"></span>
+				<span class="dot" onclick="currentSlide(2)"></span>
+				<span class="dot" onclick="currentSlide(3)"></span>
+			</div>
+			<article>
+				<img id="homeimg" src="bottaswin2.jpg">
+				<h4>#ATeamComeTrue – Mercedes-AMG Petronas Motorsport write Formula One history with their sixth consecutive double title</h4>
+				<p>- Mercedes-AMG Petronas Motorsport win the FIA Formula One Constructors’ Championship for the sixth time in a row</p>
+				<p>- Lewis and Valtteri are the only two drivers who can still win the Drivers’ Championship, securing the sixth consecutive Drivers’ Title for the team as well – making Mercedes-AMG Petronas Motorsport the first team in Formula One history to win both titles six times in a row</p>
+				<p>- Valtteri claimed his sixth victory in Formula One, his third of the 2019 season and first at the Japanese Grand Prix</p>
+				<p>- Lewis finished the race in P3 claiming an additional point for the fastest lap – his fourth fastest lap at the Japanese Grand Prix, equalling Michael Schumacher’s record for the most fastest laps in Japan</p>
+				<p>- Today’s result marks the 100th points finish for Valtteri</p>
+				<p>- Lewis (338 points) leads the Drivers’ Championship by 64 points from Valtteri (274 points) with Charles Leclerc (221) a further 53 points behind, giving only our two drivers the chance to win the 2019 Drivers’ Title</p>
+				<p>- Mercedes-AMG Petronas Motorsport (612 points) leads Ferrari (435 points) by 177 points – an unassailable lead in the Constructors’ Championship</p>
+			</article>
+			<aside>
+				<p>2019 United States Grand Prix: <strong>Lewis Hamilton</strong> wins the 2019 FIA Formula One Drivers’ Championship, bringing his total number to 6, one less than Michael Schumacher.</p>
+			</aside>
 		</section>
 	</body>
 	<script src="jscript.js"></script>
