--- a/src/home.html
+++ b/src/home.html
@@ -17,7 +17,7 @@
 					<ul>
 						<li><a href="home.html">Home</a></li>
 						<li><a href="about.html">About</a></li>
-						<li><a>Gallery</a>
+						<li><a href="">Gallery</a>
 							<ul class="dropdown">
 								<li><a href="team.html">Team</a></li>
 								<li><a href="cars.html">Cars</a></li>
