--- a/src/cars.html
+++ b/src/cars.html
@@ -36,7 +36,7 @@
 					Sum up that #BrazilGP in one word 🤯
 •
 #MercedesAMGF1 #Mercedes #F1 #Brazil #racing #PETRONASmotorsports
-					<p id="paragrafgal"><strong>@mercedesamgf1</strong> via Instagram</p>
+					<p id="paragrafgal"><strong><a href="https://www.instagram.com/mercedesamgf1">@mercedesamgf1</a></strong> via Instagram</p>
 					<p id="paragrafgal"><strong>Likes:</strong> 47.000+</p>
 				</figcaption>
 			</figure>
@@ -48,17 +48,17 @@
 It's a podium finish for Lewis and DNF for Valtteri at the #BrazilGP
 •
 #MercedesAMGF1 #Mercedes #F1 #Brazil #PETRONASmotorsports
-					<p id="paragrafgal"><strong>@mercedesamgf1</strong> via Instagram</p>
+					<p id="paragrafgal"><strong><a href="https://www.instagram.com/mercedesamgf1">@mercedesamgf1</a></strong> via Instagram</p>
 					<p id="paragrafgal"><strong>Likes:</strong> 69.000+</p>
 				</figcaption>
 			</figure>
 			<figure>
 				<img id="galerie" src="https://instagram.fsbz1-2.fna.fbcdn.net/vp/6ce8e68042b61209dedbddde8b3f89cd/5E4F10AE/t51.2885-15/sh0.08/e35/c158.0.1124.1124a/s640x640/74361210_611605509376732_3520895247879063690_n.jpg?_nc_ht=instagram.fsbz1-2.fna.fbcdn.net&_nc_cat=104" alt="Instagram" />
 				<figcaption>
-					Back in the car for the first time as a six-time world champion! 🙌 @lewishamilton
+					Back in the car for the first time as a six-time world champion! 🙌 <a href="https://www.instagram.com/lewishamilton">@lewishamilton</a>
 •
 #MercedesAMGF1 #Mercedes #F1 #LH44 #BrazilGP #PETRONASmotorsports
-					<p id="paragrafgal"><strong>@mercedesamgf1</strong> via Instagram</p>
+					<p id="paragrafgal"><strong><a href="https://www.instagram.com/mercedesamgf1">@mercedesamgf1</a></strong> via Instagram</p>
 					<p id="paragrafgal"><strong>Likes:</strong> 82.000+</p>
 				</figcaption>
 			</figure>
@@ -66,17 +66,17 @@ It's a podium finish for Lewis and DNF for Valtteri at the #BrazilGP
 				<img id="galerie" src="https://instagram.fsbz1-1.fna.fbcdn.net/vp/415e6d4a442098c34e021cac99fbd8f8/5E8BE21C/t51.2885-15/sh0.08/e35/c86.0.1267.1267a/s640x640/71530684_3630285683651951_1237872632433301153_n.jpg?_nc_ht=instagram.fsbz1-1.fna.fbcdn.net&_nc_cat=111" alt="Instagram" />
 				<figcaption>	
 					Leaving Mexico City in our tracks 👋
-@cota_official, we’re coming for you!
+<a href="https://www.instagram.com/cota_official">@cota_official</a>, we’re coming for you!
 •
 #MercedesAMGF1 #Mercedes #F1 #VB77 #circuitoftheamericas #PETRONASmotorsports
-					<p id="paragrafgal"><strong>@mercedesamgf1</strong> via Instagram</p>
+					<p id="paragrafgal"><strong><a href="https://www.instagram.com/mercedesamgf1">@mercedesamgf1</a></strong> via Instagram</p>
 					<p id="paragrafgal"><strong>Likes:</strong> 37.000+</p>
 				</figcaption>
 			</figure>
 			<figure>
 				<img id="galerie" src="https://instagram.fsbz1-2.fna.fbcdn.net/vp/c6399de1ba1e36c7285147dad4dabfd8/5E5825EA/t51.2885-15/sh0.08/e35/s640x640/70220176_558698834670579_1524189789827674503_n.jpg?_nc_ht=instagram.fsbz1-2.fna.fbcdn.net&_nc_cat=103" alt="Instagram" />
 				<figcaption>	
-					<p id="paragrafgal"><strong>@mercedesamgf1</strong> via Instagram</p>
+					<p id="paragrafgal"><strong><a href="https://www.instagram.com/mercedesamgf1">@mercedesamgf1</a></strong> via Instagram</p>
 					<p id="paragrafgal"><strong>Likes:</strong> 195.000+</p>
 				</figcaption>
 			</figure>
