--- a/src/team.html
+++ b/src/team.html
@@ -33,18 +33,18 @@
 			<figure>
 				 <img id="galerie" src="https://instagram.fsbz1-1.fna.fbcdn.net/vp/37c5cd870f51c46afdbae5e99106fd4b/5E53E343/t51.2885-15/sh0.08/e35/c0.180.1440.1440a/s640x640/72695009_403855437166044_636040077543468600_n.jpg?_nc_ht=instagram.fsbz1-1.fna.fbcdn.net&_nc_cat=1" alt="instagram" />
 				 <figcaption>
-					🏁🤳⚽️ @lewishamilton x @danialves
-					<p id="paragrafgal"><strong>@mercedesamgf1</strong> via Instagram</p>
+					🏁🤳⚽️ <a href="https://www.instagram.com/lewishamilton">@lewishamilton</a> x <a href="https://www.instagram.com/danialves">@danialves</a>
+					<p id="paragrafgal"><strong><a href="https://www.instagram.com/mercedesamgf1">@mercedesamgf1</a></strong> via Instagram</p>
 					<p id="paragrafgal"><strong>Likes:</strong> 207.000+</p>
 				</figcaption>
 			</figure>
 			<figure>
 				<img id="galerie" src="https://instagram.fsbz1-1.fna.fbcdn.net/vp/0b63cb6bb5f61af30fcd41b9dd2c2e83/5E701966/t51.2885-15/sh0.08/e35/s640x640/71197869_166283737794542_7719599639721535901_n.jpg?_nc_ht=instagram.fsbz1-1.fna.fbcdn.net&_nc_cat=102" alt="instagram" />
 				<figcaption>
-					When you’ve had your morning coffees 😏 @valtteribottas
+					When you’ve had your morning coffees 😏 <a href="https://www.instagram.com/valtteribottas/">@valtteribottas</a>
 •
 #MercedesAMGF1 #Mercedes #F1 #ValtteriBottas #instacoffee #PETRONASmotorsports
-					<p id="paragrafgal"><strong>@mercedesamgf1</strong> via Instagram</p>
+					<p id="paragrafgal"><strong><a href="https://www.instagram.com/mercedesamgf1">@mercedesamgf1</a></strong> via Instagram</p>
 					<p id="paragrafgal"><strong>Likes:</strong> 70.000+</p>
 				</figcaption>
 			</figure>
@@ -52,7 +52,7 @@
 				<img id="galerie" src="https://instagram.fsbz1-1.fna.fbcdn.net/vp/b23799ad31f688ab477d4fca0d06e53f/5E58C595/t51.2885-15/sh0.08/e35/s640x640/71711633_128249741925814_4887968953346732295_n.jpg?_nc_ht=instagram.fsbz1-1.fna.fbcdn.net&_nc_cat=110" alt="Instagram" />
 				<figcaption>
 					❤️
-					<p id="paragrafgal"><strong>@mercedesamgf1</strong> via Instagram</p>
+					<p id="paragrafgal"><strong><a href="https://www.instagram.com/mercedesamgf1">@mercedesamgf1</a></strong> via Instagram</p>
 					<p id="paragrafgal"><strong>Likes:</strong> 36.000+</p>
 				</figcaption>
 			</figure>
@@ -62,7 +62,7 @@
 					Find a group of people who challenge and inspire you, spend a lot of time with them, and it will change your life... 💪 #ATeamComeTrue
 •
 #MercedesAMGF1 #Mercedes #F1 #Team #Family #PETRONASmotorsports
-					<p id="paragrafgal"><strong>@mercedesamgf1</strong> via Instagram</p>
+					<p id="paragrafgal"><strong><a href="https://www.instagram.com/mercedesamgf1">@mercedesamgf1</a></strong> via Instagram</p>
 					<p id="paragrafgal"><strong>Likes:</strong> 47.000+</p>
 				</figcaption>
 			</figure>
@@ -70,7 +70,7 @@
 				<img id="galerie" src="https://instagram.fsbz1-2.fna.fbcdn.net/vp/bb224eb73e50e69cf645d72b3fec913c/5E6A2886/t51.2885-15/sh0.08/e35/c197.0.1045.1045a/s640x640/73291323_401715610735335_8462685786542518288_n.jpg?_nc_ht=instagram.fsbz1-2.fna.fbcdn.net&_nc_cat=103" alt="Instagram" />
 				<figcaption>	
 					6️⃣x🏆 #ATeamComeTrue
-					<p id="paragrafgal"><strong>@mercedesamgf1</strong> via Instagram</p>
+					<p id="paragrafgal"><strong><a href="https://www.instagram.com/mercedesamgf1">@mercedesamgf1</a></strong> via Instagram</p>
 					<p id="paragrafgal"><strong>Likes:</strong> 182.000+</p>
 				</figcaption>
 			</figure>
