--- a/src/cars.html
+++ b/src/cars.html
@@ -1,6 +1,6 @@
 <html>
 	<head>
-		<title>Team - Mercedes-AMG F1</title>
+		<title>Cars - Mercedes-AMG F1</title>
 		<meta charset="UTF-8">
 		<meta name="description" content="Mercedes F1 Team">
 		<meta name="keywords" content="mercedes,f1,formula 1,hamilton">
@@ -23,7 +23,7 @@
 								<li><a href="cars.html">Cars</a></li>
 							</ul>
 						</li>
-						<li><a href="home.html">Contact</a></li>
+						<li><a href="contact.html">Contact</a></li>
 					</ul>
 			</nav>
 		</header>
