--- a/src/team.html
+++ b/src/team.html
@@ -23,7 +23,7 @@
 								<li><a href="cars.html">Cars</a></li>
 							</ul>
 						</li>
-						<li><a href="home.html">Contact</a></li>
+						<li><a href="contact.html">Contact</a></li>
 					</ul>
 			</nav>
 		</header>
