Sticky, transformare, tabel, nth, base

--- a/src/about.html
+++ b/src/about.html
@@ -5,7 +5,8 @@
 		<meta name="description" content="Mercedes F1 Team">
 		<meta name="keywords" content="mercedes,f1,formula 1,hamilton">
 		<meta name="author" content="Necula Florin-Alexandru">
-		<link rel="stylesheet" type="text/css" href="style.css">	
+		<link rel="stylesheet" type="text/css" href="style.css">
+		<base href = "./" />		
 	</head>
 	<body id="about">
 		<header>
@@ -28,7 +29,7 @@
 			</nav>
 		</header>
 		
-		<h2>Drivers</h2>
+		<h2 id="sticky_header">Drivers</h2>
 		<div class="container">
 			<div class="item">
 				<img id="drivers" src="rsz_hamilton.jpg">
