--- a/src/cars.html
+++ b/src/cars.html
@@ -5,7 +5,8 @@
 		<meta name="description" content="Mercedes F1 Team">
 		<meta name="keywords" content="mercedes,f1,formula 1,hamilton">
 		<meta name="author" content="Necula Florin-Alexandru">
-		<link rel="stylesheet" type="text/css" href="style.css">	
+		<link rel="stylesheet" type="text/css" href="style.css">
+		<base href = "./" />		
 	</head>
 	<body id="team">
 		<header>
