--- a/src/contact.html
+++ b/src/contact.html
@@ -5,7 +5,8 @@
 		<meta name="description" content="Mercedes F1 Team">
 		<meta name="keywords" content="mercedes,f1,formula 1,hamilton">
 		<meta name="author" content="Necula Florin-Alexandru">
-		<link rel="stylesheet" type="text/css" href="style.css">	
+		<link rel="stylesheet" type="text/css" href="style.css">
+		<base href = "./" />		
 	</head>
 	<body>
 		<header>
@@ -48,6 +49,34 @@
 		</table>
 		<h1>Learn more about the team</h1>
 		<iframe width="560" height="315" src="https://www.youtube.com/embed/h_1zxUCDKJ8" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>		
+		<h1>Past Performance</h1>
+		<table>
+			<tr>
+				<th>Year</th>
+				<th>Drivers' Championship</th>
+				<th>Constructors' Championship</th>
+			</tr>
+			<tr>
+				<td>2019</td>
+				<td>1st Place (413 points)</td>
+				<td>1st Place (739 points)</td>
+			</tr>
+			<tr>
+				<td>2018</td>
+				<td>1st Place (408 points)</td>
+				<td>1st Place (655 points)</td>
+			</tr>
+			<tr>
+				<td>2017</td>
+				<td>1st Place (363 points)</td>
+				<td>1st Place (668 points)</td>
+			</tr>
+			<tr>
+				<td>2016</td>
+				<td>1st Place (385 points)</td>
+				<td>1st Place (765 points)</td>
+			</tr>		
+		</table>
 		<h3>Title partner</h3>
 		<div class="row">
 			<div class="column">
