--- a/src/team.html
+++ b/src/team.html
@@ -6,6 +6,7 @@
 		<meta name="keywords" content="mercedes,f1,formula 1,hamilton">
 		<meta name="author" content="Necula Florin-Alexandru">
 		<link rel="stylesheet" type="text/css" href="style.css">	
+		<base href = "./" />
 	</head>
 	<body id="team">
 		<header>
