Modificari Proiect Nou

--- a/src/home.html
+++ b/src/home.html
@@ -24,6 +24,7 @@
 								<li><a href="cars.html">Cars</a></li>
 							</ul>
 						</li>
+						<li><a href="shop.html">Shop</a></li>
 						<li><a href="contact.html">Contact</a></li>
 					</ul>
 			</nav>
@@ -70,6 +71,7 @@
 				<p>2019 United States Grand Prix: <strong>Lewis Hamilton</strong> wins the 2019 FIA Formula One Drivers’ Championship, bringing his total number to 6, one less than Michael Schumacher.</p>
 			</aside>
 		</section>
+		<img id="masinuta" src="littlecar.png">
 	</body>
 	<script src="jscript.js"></script>
 </html>
