--- a/src/contact.html
+++ b/src/contact.html
@@ -24,6 +24,7 @@
 								<li><a href="cars.html">Cars</a></li>
 							</ul>
 						</li>
+						<li><a href="shop.html">Shop</a></li>
 						<li><a href="contact.html">Contact</a></li>
 					</ul>
 			</nav>
